--- a/EFTApi/EFTApi.csproj
+++ b/EFTApi/EFTApi.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EFTApiPlugin.cs" />
+    <Compile Include="EFTConfigurationPluginAttributes.cs" />
     <Compile Include="EFTGlobal.cs" />
     <Compile Include="EFTHelpers.cs" />
     <Compile Include="EFTVersion.cs" />
