--- a/EFTUtils/EFTUtils.csproj
+++ b/EFTUtils/EFTUtils.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="AssetBundleHelper.cs" />
     <Compile Include="ColorHelper.cs" />
+    <Compile Include="EFTConfigurationPluginAttributes.cs" />
     <Compile Include="EFTUtilsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityWebRequestHelper.cs" />
