--- a/EFTUtils/EFTUtils.csproj
+++ b/EFTUtils/EFTUtils.csproj
@@ -80,7 +80,7 @@
   <ItemGroup>
     <Compile Include="AssetBundleHelper.cs" />
     <Compile Include="ColorHelper.cs" />
-    <Compile Include="EFTConfigurationPluginAttributes.cs" />
+    <Compile Include="Attributes\EFTConfigurationPluginAttributes.cs" />
     <Compile Include="EFTUtilsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityWebRequestHelper.cs" />
@@ -88,5 +88,6 @@
   <ItemGroup>
     <None Include="kmyuhkyuk.pfx" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
