--- a/EFTUtils/EFTUtils.csproj
+++ b/EFTUtils/EFTUtils.csproj
@@ -75,6 +75,7 @@
     <Compile Include="AssetBundleHelper.cs" />
     <Compile Include="ColorHelper.cs" />
     <Compile Include="EFTUtilsPlugin.cs" />
+    <Compile Include="FileExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityWebRequestHelper.cs" />
   </ItemGroup>
