--- a/EFTConfiguration/EFTConfiguration.csproj
+++ b/EFTConfiguration/EFTConfiguration.csproj
@@ -47,6 +47,9 @@
     <Reference Include="BepInEx">
       <HintPath>R:\Battlestate Games\Client.0.12.12.15.17349\BepInEx\core\BepInEx.dll</HintPath>
     </Reference>
+    <Reference Include="Crc32.NET, Version=1.0.0.0, Culture=neutral, PublicKeyToken=dc0b95cf99bf4e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\Crc32.NET.1.2.0\lib\net20\Crc32.NET.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.11.46.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.11.46\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
@@ -125,6 +128,7 @@
     <Compile Include="Components\ValueType\ConfigVector2.cs" />
     <Compile Include="Components\ValueType\ConfigVector3.cs" />
     <Compile Include="Components\ValueType\ConfigVector4.cs" />
+    <Compile Include="EFTLogListener.cs" />
     <Compile Include="Helpers\CustomLocalizedHelper.cs" />
     <Compile Include="EFTConfiguration.cs" />
     <Compile Include="Attributes\EFTConfigurationPluginAttributes.cs" />
