Used Lazy<T> to Instance EFTConfiguration Refactor to MVC Framework

--- a/EFTConfiguration/EFTConfiguration.csproj
+++ b/EFTConfiguration/EFTConfiguration.csproj
@@ -108,49 +108,55 @@
     <Compile Include="AcceptableValue\AcceptableValueCustomRange.cs" />
     <Compile Include="Attributes\ConfigurationManagerAttributes.cs" />
     <Compile Include="Attributes\EFTConfigurationAttributes.cs" />
-    <Compile Include="Components\Base\ConfigBase.cs" />
-    <Compile Include="Components\Base\ConfigObjectCustom.cs" />
-    <Compile Include="Components\Base\ConfigDescription.cs" />
-    <Compile Include="Components\Base\ConfigDropdownList.cs" />
-    <Compile Include="Components\Base\ConfigObjectDropdownList.cs" />
-    <Compile Include="Components\Base\ConfigGetValue.cs" />
-    <Compile Include="Components\Base\ConfigNum.cs" />
-    <Compile Include="Components\Base\ConfigObject.cs" />
-    <Compile Include="Components\Base\ConfigSliderRange.cs" />
-    <Compile Include="Components\Base\ConfigAction.cs" />
-    <Compile Include="Components\ClassType\ConfigStringAction.cs" />
-    <Compile Include="Components\ConfigUnknown.cs" />
-    <Compile Include="Components\ConfigUnknownCustom.cs" />
-    <Compile Include="Components\ValueType\ConfigColor.cs" />
-    <Compile Include="Components\ValueType\ConfigEnum.cs" />
-    <Compile Include="Components\ValueType\ConfigFloat.cs" />
-    <Compile Include="Components\ValueType\ConfigFloatSlider.cs" />
-    <Compile Include="Components\ValueType\ConfigInt.cs" />
-    <Compile Include="Components\ConfigHeader.cs" />
-    <Compile Include="Components\Base\ConfigReset.cs" />
-    <Compile Include="Components\ValueType\ConfigIntSlider.cs" />
-    <Compile Include="Components\ValueType\ConfigKeyboardShortcut.cs" />
-    <Compile Include="Components\ValueType\ConfigQuaternion.cs" />
-    <Compile Include="Components\ClassType\ConfigString.cs" />
-    <Compile Include="Components\ClassType\ConfigStringDropdown.cs" />
-    <Compile Include="Components\ValueType\ConfigToggle.cs" />
-    <Compile Include="Components\ValueType\ConfigVector2.cs" />
-    <Compile Include="Components\ValueType\ConfigVector3.cs" />
-    <Compile Include="Components\ValueType\ConfigVector4.cs" />
+    <Compile Include="Controllers\EFTConfigurationController.cs" />
+    <Compile Include="Models\ConfigModel.cs" />
+    <Compile Include="Models\ConfigurationModel.cs" />
+    <Compile Include="Models\EFTConfigurationModel.cs" />
+    <Compile Include="Models\LogModel.cs" />
+    <Compile Include="Models\SettingsModel.cs" />
+    <Compile Include="Views\Components\Base\ConfigBase.cs" />
+    <Compile Include="Views\Components\Base\ConfigObjectCustom.cs" />
+    <Compile Include="Views\Components\Base\ConfigDescription.cs" />
+    <Compile Include="Views\Components\Base\ConfigDropdownList.cs" />
+    <Compile Include="Views\Components\Base\ConfigObjectDropdownList.cs" />
+    <Compile Include="Views\Components\Base\ConfigGetValue.cs" />
+    <Compile Include="Views\Components\Base\ConfigNum.cs" />
+    <Compile Include="Views\Components\Base\ConfigObject.cs" />
+    <Compile Include="Views\Components\Base\ConfigSliderRange.cs" />
+    <Compile Include="Views\Components\Base\ConfigAction.cs" />
+    <Compile Include="Views\Components\ClassType\ConfigStringAction.cs" />
+    <Compile Include="Views\Components\ConfigUnknown.cs" />
+    <Compile Include="Views\Components\ConfigUnknownCustom.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigColor.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigEnum.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigFloat.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigFloatSlider.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigInt.cs" />
+    <Compile Include="Views\Components\ConfigHeader.cs" />
+    <Compile Include="Views\Components\Base\ConfigReset.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigIntSlider.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigKeyboardShortcut.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigQuaternion.cs" />
+    <Compile Include="Views\Components\ClassType\ConfigString.cs" />
+    <Compile Include="Views\Components\ClassType\ConfigStringDropdown.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigToggle.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigVector2.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigVector3.cs" />
+    <Compile Include="Views\Components\ValueType\ConfigVector4.cs" />
     <Compile Include="EFTLogListener.cs" />
     <Compile Include="Helpers\LocalizedHelper.cs" />
-    <Compile Include="EFTConfiguration.cs" />
+    <Compile Include="Views\EFTConfigurationView.cs" />
     <Compile Include="Attributes\EFTConfigurationPluginAttributes.cs" />
     <Compile Include="EFTConfigurationPlugin.cs" />
     <Compile Include="Patches\CursorPatch.cs" />
     <Compile Include="PrefabManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\CrawlerHelper.cs" />
-    <Compile Include="UI\Config.cs" />
-    <Compile Include="UI\Description.cs" />
-    <Compile Include="UI\Drag.cs" />
-    <Compile Include="UI\PluginInfo.cs" />
-    <Compile Include="UI\UnlockCursor.cs" />
+    <Compile Include="Views\Config.cs" />
+    <Compile Include="Views\Description.cs" />
+    <Compile Include="Views\Drag.cs" />
+    <Compile Include="Views\PluginInfo.cs" />
+    <Compile Include="Views\UnlockCursor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="kmyuhkyuk.pfx" />
