--- a/EFTUtils/EFTUtils.csproj
+++ b/EFTUtils/EFTUtils.csproj
@@ -49,6 +49,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>R:\Battlestate Games\Client.0.12.12.15.17349\EscapeFromTarkov_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>R:\Battlestate Games\Client.0.12.12.15.17349\EscapeFromTarkov_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
@@ -80,6 +83,7 @@
     <Compile Include="ColorHelper.cs" />
     <Compile Include="CustomDictionaryConverter.cs" />
     <Compile Include="CustomLocalized.cs" />
+    <Compile Include="EFTFontHelper.cs" />
     <Compile Include="EFTUtilsPlugin.cs" />
     <Compile Include="FileExtensions.cs" />
     <Compile Include="IUpdate.cs" />
