--- a/EFTReflection/EFTReflection.csproj
+++ b/EFTReflection/EFTReflection.csproj
@@ -77,6 +77,7 @@
     <Compile Include="RefHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RefTool.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="kmyuhkyuk.pfx" />
