--- a/EFTUtils/EFTUtils.csproj
+++ b/EFTUtils/EFTUtils.csproj
@@ -95,6 +95,7 @@
     <Compile Include="EFTFontHelper.cs" />
     <Compile Include="EFTUtilsPlugin.cs" />
     <Compile Include="FileExtensions.cs" />
+    <Compile Include="FileDialog.cs" />
     <Compile Include="IUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnityWebRequestHelper.cs" />
