--- a/EFTApi/EFTApi.csproj
+++ b/EFTApi/EFTApi.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Patches\GamePlayerOwnerPatchs.cs" />
     <Compile Include="Patches\TriggerWithIdPatchs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Helpers\RequestHandlerHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="kmyuhkyuk.pfx" />
