Update Version num

--- a/ConfigurationTest/ConfigurationTest.csproj
+++ b/ConfigurationTest/ConfigurationTest.csproj
@@ -60,7 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurationTest.cs" />
+    <Compile Include="ConfigurationTestPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
